deployment/deployment-template-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-release-blue
spec:
  selector:
    matchLabels:
      app: devops-release-blue
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: devops-release-blue
    spec:
      containers:
      - name: devops-release
        image: #{image}#
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command: ["sleep","90"]
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 4
          timeoutSeconds: 5
          failureThreshold: 3
      terminationGracePeriodSeconds: 101

---
apiVersion: v1
kind: Service
metadata:
  name: devops-release-blue-service
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: devops-release-blue
