deployment/ingress-blue.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: devops-release-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  devops-release-blue-service
            port: 
              number: 8080
